Refactors week 1 content to focus on football data basics
Reorganizes and rewrites the notebook to introduce data analysis concepts through practical football examples, prioritizing real-world context and student reflection. Updates all code outputs and learning prompts to reinforce variables, types, operations, lists, and dictionaries with football data, making the material more engaging and relevant for beginners.

--- a/contenido/bloque-1/semana-1/configuracion-fundamentos.ipynb
+++ b/contenido/bloque-1/semana-1/configuracion-fundamentos.ipynb
@@ -5,51 +5,48 @@
    "id": "09afa1d2",
    "metadata": {},
    "source": [
-    "# Semana 1: ¿Cómo hablan las computadoras el idioma de los números?\n",
+    "# Semana 1: Primer paso en el análisis de datos de fútbol\n",
     "\n",
-    "## ¿Alguna vez te has preguntado cómo una computadora entiende que Messi anotó un gol?\n",
+    "## Apertura del curso (mirada global)\n",
+    "**Conversación inicial** (antes de hablar de código):\n",
+    "- ¿Qué decisiones futbolísticas te gustaría respaldar con datos (alineaciones, fichajes, cambios, detectar talento)?\n",
+    "- ¿Qué te intriga más: describir lo que pasó, explicar por qué pasó o predecir qué podría pasar?\n",
+    "- ¿Dónde ves hoy que se usan números en el fútbol (transmisiones, videojuegos, scouting, redes sociales)?\n",
+    "- Al terminar el curso: ¿qué te gustaría ser capaz de responder con datos (¿Quién rinde mejor?, ¿Qué jugador tiene más potencial?, ¿Cómo cambia un equipo con cierto cambio táctico?)\n",
     "\n",
-    "**Reflexión inicial**: Cuando ves las estadísticas de un partido en televisión, ¿has pensado cómo la computadora \"sabe\" que el Barcelona anotó 3 goles y el Real Madrid 1?\n",
-    "\n",
-    "### Pregunta motivadora para la semana:\n",
-    "Si quisieras enseñarle a una computadora a calcular el promedio de goles de Cristiano Ronaldo, ¿por dónde empezarías?\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## ESTRUCTURA SEMANAL: 3 Sesiones de Descubrimiento\n",
-    "\n",
-    "### SESIÓN 1: ¿Qué es realmente programar? (50 min)\n",
-    "**Pregunta guía**: ¿Cómo le damos instrucciones precisas a una máquina?\n",
-    "- ¿Qué tienen en común una receta de cocina y un programa?\n",
-    "- ¿Por qué Python es perfecto para analizar deportes?\n",
-    "- ¿Cómo \"guardamos\" información sobre jugadores y equipos?\n",
-    "\n",
-    "### SESIÓN 2: ¿Cómo calculamos como lo haría un entrenador? (50 min)  \n",
-    "**Pregunta guía**: ¿Qué operaciones matemáticas usan los técnicos deportivos?\n",
-    "- ¿Cómo calcula un DT el promedio de goles de su equipo?\n",
-    "- ¿Por qué algunos números son más importantes que otros?\n",
-    "- ¿Qué decisiones puede tomar la computadora por nosotros?\n",
-    "\n",
-    "### SESIÓN 3: ¿Cómo organizamos datos como un club profesional? (50 min)\n",
-    "**Pregunta guía**: ¿Cómo almacenan información los equipos como el Manchester City?\n",
-    "- ¿Qué diferencia hay entre una lista de jugadores y sus estadísticas?\n",
-    "- ¿Cómo relacionamos diferentes tipos de información deportiva?\n",
-    "- ¿Por qué la organización de datos determina el éxito del análisis?\n",
+    "**Meta del curso completo (visión sencilla)**: Pasar de describir datos básicos (Bloque 1) → analizarlos y visualizarlos para encontrar patrones (Bloque 2) → construir modelos simples que hagan predicciones claras y explicables (Bloque 3).\n",
     "\n",
     "---\n",
+    "## Enfoque específico de la Semana 1\n",
+    "Esta primera semana construimos el ABC del \"idioma\" que usaremos todo el curso: cómo representar información básica del fútbol dentro de la computadora.\n",
     "\n",
-    "## ¿Por qué Python para analizar fútbol?\n",
+    "**Objetivo central**: Aprender a guardar y manipular datos simples (nombres, edades, goles) para que la computadora pueda empezar a \"razonar\" sobre ellos.\n",
     "\n",
-    "**Pregunta reflexiva**: ¿Sabías que clubes como el FC Barcelona y Liverpool usan Python para decidir a qué jugadores fichar?\n",
+    "**Preguntas guía claras de la semana**:\n",
+    "1. ¿Cómo le digo a la computadora que un jugador se llama X y tiene Y goles?\n",
+    "2. ¿Qué diferencia hay entre un número, un texto y un dato Verdadero/Falso en un contexto deportivo?\n",
+    "3. ¿Cómo realizar operaciones simples (sumar goles, calcular promedios básicos)?\n",
+    "4. ¿Por qué organizar bien la información desde el inicio facilita todo el análisis posterior?\n",
     "\n",
-    "### El lenguaje secreto del fútbol moderno:\n",
-    "- **¿Te imaginas que...?** Cada pase, cada carrera, cada toque se convierte en números\n",
-    "- **¿Sabías que...?** Los scouts usan algoritmos Python para encontrar la próxima estrella\n",
-    "- **¿Has considerado que...?** Las alineaciones se optimizan con código similar al que aprenderás\n",
+    "---\n",
+    "## Ruta de aprendizaje de la semana (3 sesiones)\n",
+    "- **Sesión 1**: Representar información (variables y tipos de datos) usando ejemplos de jugadores.\n",
+    "- **Sesión 2**: Comparar y decidir (operadores y condicionales) como un entrenador que evalúa rendimiento.\n",
+    "- **Sesión 3**: Agrupar y estructurar (listas y diccionarios) para manejar planteles completos.\n",
     "\n",
-    "**Tu misión esta semana**: Aprender el \"idioma\" que usan las computadoras para entender el fútbol.\n",
+    "Al final de la semana tendrás un mini sistema muy simple que ya clasifica y resume información básica de jugadores.\n",
     "\n",
-    "¿Estás listo para descubrir cómo los números cobran vida en Python?"
+    "---\n",
+    "## Puente motivador\n",
+    "Antes de que existan gráficos bonitos o modelos que predicen resultados, siempre empieza igual: datos crudos bien representados. Esta semana es ese cimiento.\n",
+    "\n",
+    "**Piensa**: Si te equivocas representando los datos (ej. confundes texto con número), ¿qué tan confiable sería cualquier análisis posterior?\n",
+    "\n",
+    "---\n",
+    "## Primera chispa de curiosidad\n",
+    "Si quisieras calcular rápidamente: \"¿Qué porcentaje de los goles del equipo hizo un solo jugador?\" ¿Qué piezas mínimas de información necesitas guardar primero?\n",
+    "\n",
+    "Empecemos respondiendo esa clase de preguntas paso a paso.\n"
    ]
   },
   {
@@ -103,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a1fbc3f9",
    "metadata": {},
    "outputs": [
@@ -111,10 +108,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Versión de Python: 3.10.12 (main, May 27 2025, 17:12:29) [GCC 11.4.0]\n",
-      "Todas las librerías están instaladas correctamente\n",
-      "pandas: 2.3.1\n",
-      "numpy: 2.2.6\n"
+      "FICHA DEL JUGADOR\n",
+      "=========================\n",
+      "Nombre: Lionel Messi\n",
+      "Edad: 37 años\n",
+      "Goles esta temporada: 10\n",
+      "Altura: 1.7 metros\n",
+      "¿Está activo?: True\n",
+      "\n",
+      "Pregunta de reflexión:\n",
+      "¿Notas cómo cada tipo de información se guarda de manera diferente?\n",
+      "- Texto (nombres) va entre comillas\n",
+      "- Números enteros (edad, goles) van sin comillas\n",
+      "- Números decimales (altura) usan punto\n",
+      "- Verdadero/Falso (estado) son True/False\n",
+      "\n",
+      "¿Por qué crees que es importante esta diferencia?\n"
      ]
     }
    ],
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "96a48a03",
    "metadata": {},
    "outputs": [
@@ -196,10 +205,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equipo: Barcelona\n",
-      "Goles: 3\n",
-      "Promedio de edad: 25.5\n",
-      "Es ganador: True\n"
+      "OPERACIONES BÁSICAS CON DATOS DEPORTIVOS\n",
+      "=============================================\n",
+      "Goles para llegar al objetivo: 5\n",
+      "Edad al terminar contrato: 40 años\n",
+      "Altura en centímetros: 170.0 cm\n",
+      "Goles promedio por año de vida: 0\n",
+      "\n",
+      "EXPLORANDO OPERADORES:\n",
+      "==============================\n",
+      "+ (suma): para agregar valores\n",
+      "- (resta): para encontrar diferencias\n",
+      "* (multiplicación): para convertir unidades\n",
+      "// (división entera): para promedios sin decimales\n",
+      "/ (división decimal): para cálculos precisos\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿Cuál es la diferencia entre // y / ?\n",
+      "2. ¿En qué casos deportivos usarías cada operador?\n",
+      "3. ¿Qué otros cálculos te gustaría hacer con estos datos?\n"
      ]
     }
    ],
@@ -293,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "dcf9ad27",
    "metadata": {},
    "outputs": [
@@ -301,12 +325,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: Lionel Messi - Tipo: <class 'str'>\n",
-      "Edad: 36 - Tipo: <class 'int'>\n",
-      "Altura: 1.7 - Tipo: <class 'float'>\n",
-      "Es activo: True - Tipo: <class 'bool'>\n",
-      "Equipos: ['Barcelona', 'PSG', 'Miami'] - Tipo: <class 'list'>\n",
-      "Estadísticas: {'goles': 800, 'asistencias': 350} - Tipo: <class 'dict'>\n"
+      "ANÁLISIS COMPARATIVO DE RENDIMIENTO\n",
+      "========================================\n",
+      "¿Es un veterano (>30 años)?: True\n",
+      "¿Está en buena forma goleadora?: True\n",
+      "¿Es jugador titular habitual?: True\n",
+      "Promedio de goles por partido: 0.40\n",
+      "¿Es considerado goleador?: True\n",
+      "\n",
+      "OPERADORES DE COMPARACIÓN:\n",
+      "==============================\n",
+      "> (mayor que): para superar límites\n",
+      "< (menor que): para estar por debajo\n",
+      ">= (mayor o igual): para alcanzar mínimos\n",
+      "<= (menor o igual): para no exceder máximos\n",
+      "== (igual a): para coincidencias exactas\n",
+      "!= (diferente de): para exclusiones\n",
+      "\n",
+      "Preguntas de análisis:\n",
+      "1. ¿Por qué las comparaciones devuelven True o False?\n",
+      "2. ¿Qué otros límites deportivos podrías evaluar?\n",
+      "3. ¿Cómo ayudan estas comparaciones en decisiones técnicas?\n",
+      "\n",
+      "INTERPRETACIÓN:\n",
+      "Veterano: True - Experiencia valiosa\n",
+      "En forma: True - Buen momento\n",
+      "Titular: True - Jugador clave\n"
      ]
     }
    ],
@@ -392,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "3f46a35d",
    "metadata": {},
    "outputs": [
@@ -400,11 +444,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total de goles: 3\n",
-      "Diferencia de goles: 1\n",
-      "Promedio de puntos por partido: 2.4\n",
-      "Puntos posibles: 30\n",
-      "Eficiencia: 80.0%\n"
+      "SISTEMA AUTOMÁTICO DE EVALUACIÓN DE JUGADORES\n",
+      "==================================================\n",
+      "ANÁLISIS PARA CONVOCATORIA:\n",
+      "------------------------------\n",
+      "Jugador veterano - requiere evaluación especial\n",
+      "Excelente forma goleadora\n",
+      "Análisis físico: Ventaja en velocidad y agilidad\n",
+      "\n",
+      "PENDIENTE - DECISIÓN FINAL: EVALUACIÓN PENDIENTE\n",
+      "\n",
+      "ESTRUCTURA DE DECISIONES:\n",
+      "===================================\n",
+      "if (condición): - SI se cumple la condición\n",
+      "    # hacer algo - ENTONCES ejecutar esta acción\n",
+      "elif (otra_condición): - SINO SI se cumple otra condición\n",
+      "    # hacer otra cosa - ENTONCES ejecutar esta otra acción\n",
+      "else: - SINO\n",
+      "    # alternativa final - ENTONCES ejecutar acción por defecto\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿Cómo ayuda la indentación (espacios) a Python?\n",
+      "2. ¿Qué otros criterios usarías para convocar jugadores?\n",
+      "3. ¿Por qué es útil que la computadora tome decisiones automáticas?\n",
+      "4. ¿En qué se parece esto a como piensa un entrenador real?\n"
      ]
     }
    ],
@@ -509,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "2d241968",
    "metadata": {},
    "outputs": [
@@ -517,10 +580,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "¿Equipo A ganó?: True\n",
-      "¿Fue empate?: False\n",
-      "¿Equipo B perdió?: True\n",
-      "¿Hubo al menos 2 goles?: True\n"
+      "CREANDO NUESTRO PRIMER 'PLANTEL DIGITAL'\n",
+      "=============================================\n",
+      "LISTA DE CONVOCADOS:\n",
+      "--------------------\n",
+      "1. Lionel Messi\n",
+      "2. Cristiano Ronaldo\n",
+      "3. Kylian Mbappé\n",
+      "4. Erling Haaland\n",
+      "5. Vinicius Jr\n",
+      "\n",
+      "Total de jugadores convocados: 5\n",
+      "Primer convocado: Lionel Messi\n",
+      "Último convocado: Vinicius Jr\n",
+      "\n",
+      "Preguntas sobre listas:\n",
+      "=========================\n",
+      "1. ¿Por qué los índices empiezan en 0 y no en 1?\n",
+      "2. ¿Qué ventajas tiene usar listas vs variables separadas?\n",
+      "3. ¿Cómo agregarías un jugador más a la lista?\n",
+      "4. ¿Qué pasa si intentas acceder a la posición 10?\n",
+      "\n",
+      "=============================================\n",
+      "ORGANIZANDO ESTADÍSTICAS COMPLETAS DE UN JUGADOR\n",
+      "=============================================\n",
+      "FICHA COMPLETA DEL JUGADOR:\n",
+      "------------------------------\n",
+      "Nombre: Lionel Messi\n",
+      "Edad: 37\n",
+      "Goles Temporada: 10\n",
+      "Asistencias: 8\n",
+      "Partidos Jugados: 25\n",
+      "Posicion: Extremo Derecho\n",
+      "Es Capitan: True\n",
+      "\n",
+      "Goles esta temporada: 10\n",
+      "Asistencias: 8\n",
+      "Es el capitán del equipo\n",
+      "\n",
+      "DIFERENCIAS CLAVE:\n",
+      "====================\n",
+      "LISTAS [] - Para elementos del mismo tipo\n",
+      "   Ejemplo: lista de nombres, lista de goles\n",
+      "DICCIONARIOS {} - Para información relacionada\n",
+      "   Ejemplo: todos los datos de un jugador\n",
+      "\n",
+      "Preguntas de organización:\n",
+      "1. ¿Cuándo usarías una lista y cuándo un diccionario?\n",
+      "2. ¿Cómo organizarías las estadísticas de todo un equipo?\n",
+      "3. ¿Qué información adicional incluirías en la ficha del jugador?\n"
      ]
     }
    ],
@@ -640,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f5120291",
    "metadata": {},
    "outputs": [
@@ -648,15 +756,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== ANÁLISIS DEL PARTIDO ===\n",
-      "Partido: Real Madrid vs Barcelona\n",
-      "Resultado: 2 - 1\n",
-      "Ganador: Real Madrid\n",
-      "Total de goles: 3\n",
-      "Diferencia: 1\n",
-      "Asistencia: 75,000 espectadores\n",
-      "Promedio de goles por minuto: 0.0333\n",
-      "Tipo de resultado: Victoria local\n"
+      "=== ANÁLISIS FC BARCELONA ===\n",
+      "\n",
+      "Equipo: FC Barcelona\n",
+      "Partidos jugados: 10\n",
+      "Victorias: 7\n",
+      "Empates: 2\n",
+      "Derrotas: 1\n",
+      "\n",
+      "ESTADÍSTICAS CALCULADAS:\n",
+      "Puntos totales: 23\n",
+      "Porcentaje de victorias: 70.0 %\n"
      ]
     }
    ],
@@ -701,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "594831cf",
    "metadata": {},
    "outputs": [
@@ -709,14 +819,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jugador: Cristiano Ronaldo\n",
-      "Equipo: AL-NASSR\n",
-      "Posición: delantero\n",
+      "INTEGRANDO TODO LO APRENDIDO\n",
+      "========================================\n",
+      "ANÁLISIS AUTOMÁTICO DE LA PLANTILLA\n",
+      "-----------------------------------\n",
+      "Lionel Messi: 10 goles - GOLEADOR REGULAR (VETERANO EXPERTO)\n",
+      "Cristiano Ronaldo: 12 goles - GOLEADOR REGULAR (VETERANO EXPERTO)\n",
+      "Kylian Mbappé: 15 goles - ESTRELLA GOLEADORA (GRAN POTENCIAL)\n",
+      "Erling Haaland: 18 goles - ESTRELLA GOLEADORA (GRAN POTENCIAL)\n",
       "\n",
-      "Presentación: El jugador Cristiano Ronaldo juega como delantero en Al-Nassr\n",
+      "Promedio de goles del equipo: 13.8\n",
       "\n",
-      "Longitud del nombre: 17 caracteres\n",
-      "¿Contiene 'Ronaldo'?: True\n"
+      "JUGADORES SOBRE EL PROMEDIO (13.8):\n",
+      "- Kylian Mbappé: 15 goles\n",
+      "- Erling Haaland: 18 goles\n",
+      "\n",
+      "RESUMEN DE CAPACIDADES DESARROLLADAS:\n",
+      "=============================================\n",
+      "- Variables: Guardar información individual\n",
+      "- Operaciones: Realizar cálculos deportivos\n",
+      "- Comparaciones: Evaluar rendimientos\n",
+      "- Condicionales: Tomar decisiones automáticas\n",
+      "- Listas: Organizar múltiples elementos\n",
+      "- Diccionarios: Estructura datos relacionados\n",
+      "- Bucles: Procesar información masivamente\n",
+      "\n",
+      "REFLEXIÓN FINAL:\n",
+      "¿Te das cuenta de que acabas de crear un sistema básico\n",
+      "similar a los que usan clubes profesionales para gestionar\n",
+      "sus plantillas y tomar decisiones basadas en datos?\n",
+      "\n",
+      "PRÓXIMO NIVEL:\n",
+      "¿Estás listo para aprender cómo los clubes de élite\n",
+      "procesan estadísticas de cientos de jugadores automáticamente?\n"
      ]
     }
    ],
