Refactor control structures in 'estructuras-control.ipynb' to enhance clarity and engagement. Updated execution counts, improved output messages, and added reflective questions to encourage deeper understanding of programming concepts. Enhanced player evaluation and tactical decision-making sections for better alignment with real-world scenarios.

--- a/contenido/bloque-1/semana-2/estructuras-control.ipynb
+++ b/contenido/bloque-1/semana-2/estructuras-control.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c22ea2b0",
    "metadata": {},
    "outputs": [
@@ -112,17 +112,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lista de jugadores: ['Messi', 'Ronaldo', 'Neymar', 'Mbappé', 'Haaland']\n",
-      "Goles por partido: [2, 1, 0, 3, 1, 2]\n",
-      "Equipos Champions: ['Real Madrid', 'Barcelona', 'Manchester City', 'Bayern Munich']\n",
+      "PROCESAMIENTO AUTOMÁTICO DE PLANTILLA\n",
+      "========================================\n",
+      "LISTA OFICIAL DE CONVOCADOS:\n",
+      "-------------------------\n",
+      " 1. Ter Stegen\n",
+      " 2. Pedri\n",
+      " 3. Gavi\n",
+      " 4. Lewandowski\n",
+      " 5. Raphinha\n",
+      " 6. Frenkie de Jong\n",
+      " 7. Ronald Araújo\n",
+      " 8. Jules Koundé\n",
       "\n",
-      "Primer jugador: Messi\n",
-      "Último jugador: Haaland\n",
-      "Goles en el tercer partido: 0\n",
+      "Total de jugadores procesados: 8\n",
       "\n",
-      "Total de jugadores: 5\n",
-      "Total de goles: 9\n",
-      "Promedio de goles: 1.50\n"
+      "Reflexión importante:\n",
+      "¿Notas cómo una sola instrucción 'for' procesó TODA la lista?\n",
+      "¿Qué pasaría si tuviéramos 25 jugadores en lugar de 8?\n",
+      "¿El código cambiaría en algo? ¡Exactamente! Esa es la magia de la automatización.\n",
+      "\n",
+      "Pregunta de análisis:\n",
+      "¿En qué se parece este bucle 'for' a cuando un entrenador\n",
+      "pasa lista antes del entrenamiento?\n"
      ]
     }
    ],
@@ -202,10 +214,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "037bbb36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SIMULACIÓN: PRÁCTICA DE PENALES DE MESSI\n",
+      "=============================================\n",
+      "Objetivo: 5 penales consecutivos\n",
+      "Simulando práctica...\n",
+      "-------------------------\n",
+      "Intento 1: GOOOOL - Consecutivos: 1\n",
+      "Intento 2: GOOOOL - Consecutivos: 2\n",
+      "Intento 3: GOOOOL - Consecutivos: 3\n",
+      "Intento 4: GOOOOL - Consecutivos: 4\n",
+      "Intento 5: GOOOOL - Consecutivos: 5\n",
+      "\n",
+      "OBJETIVO LOGRADO!\n",
+      "Messi necesitó 5 intentos totales\n",
+      "para anotar 5 penales consecutivos\n",
+      "\n",
+      "Análisis de la lógica 'while':\n",
+      "==============================\n",
+      "- MIENTRAS (condición sea verdadera):\n",
+      "  - Ejecuta las acciones\n",
+      "  - Verifica la condición nuevamente\n",
+      "- CUANDO la condición se vuelve falsa: PARA\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿Por qué usamos 'while' en lugar de 'for' aquí?\n",
+      "2. ¿Qué hubiera pasado sin la protección de 50 intentos?\n",
+      "3. ¿En qué otros entrenamientos deportivos aplicarías esta lógica?\n",
+      "4. ¿Cuál es la diferencia clave entre 'for' y 'while'?\n"
+     ]
+    }
+   ],
    "source": [
     "# ¿CÓMO SIMULAMOS UNA PRÁCTICA DE PENALES \"HASTA LOGRAR EL OBJETIVO\"?\n",
     "\n",
@@ -317,10 +363,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "22ced182",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== FICHA DE JUGADOR ===\n",
+      "Nombre: Lionel Messi\n",
+      "Posición: Delantero\n",
+      "Edad: 36\n",
+      "Equipo actual: Inter Miami\n",
+      "Goles esta temporada: 11\n"
+     ]
+    }
+   ],
    "source": [
     "# Creando una ficha completa de jugador con diccionario\n",
     "ficha_messi = {\n",
@@ -412,10 +471,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5df02ae7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SISTEMA DE DECISIÓN TÁCTICA AVANZADA\n",
+      "========================================\n",
+      "SITUACIÓN DEL PARTIDO:\n",
+      "--------------------\n",
+      "Marcador: 1 - 1\n",
+      "Minuto: 75\n",
+      "Jugadores con tarjeta amarilla: 2\n",
+      "Lesionados: 1\n",
+      "Nivel de energía del equipo: 7/10\n",
+      "\n",
+      "ANÁLISIS DE DECISIÓN ESTRATÉGICA:\n",
+      "===================================\n",
+      "¿Cambio ofensivo urgente?: True\n",
+      "¿Jugar conservador?: False\n",
+      "¿Cambios por lesión?: True\n",
+      "\n",
+      "DECISIÓN FINAL DEL ENTRENADOR:\n",
+      "------------------------------\n",
+      "Decisión: CAMBIO ULTRA-OFENSIVO: 3 delanteros\n",
+      "\n",
+      "OPERADORES LÓGICOS EXPLICADOS:\n",
+      "==============================\n",
+      "and - TODAS las condiciones deben ser verdaderas\n",
+      "or  - AL MENOS UNA condición debe ser verdadera\n",
+      "not - INVIERTE el valor (True se vuelve False)\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿Cómo se parece esto al proceso mental de un entrenador real?\n",
+      "2. ¿Qué otras variables incluirías en las decisiones?\n",
+      "3. ¿Por qué es importante combinar condiciones con 'and' y 'or'?\n",
+      "4. ¿En qué situaciones deportivas usarías 'not'?\n"
+     ]
+    }
+   ],
    "source": [
     "# ¿CÓMO EVALÚAN LOS ENTRENADORES MÚLTIPLES CONDICIONES SIMULTÁNEAMENTE?\n",
     "\n",
@@ -494,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b67adce3",
    "metadata": {},
    "outputs": [
@@ -502,11 +599,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Plantilla inicial: ['Portero', 'Defensa', 'Centrocampista']\n",
-      "Después de agregar: ['Portero', 'Líbero', 'Defensa', 'Centrocampista', 'Delantero']\n",
-      "Después de eliminar: ['Portero', 'Defensa', 'Centrocampista']\n",
-      "Elemento eliminado: Delantero\n",
-      "Después de modificar: ['Portero', 'Defensa Central', 'Centrocampista']\n"
+      "SISTEMA DE SUSTITUCIONES INTELIGENTE\n",
+      "========================================\n",
+      "EVALUACIÓN DE: Pedri\n",
+      "-------------------------\n",
+      "Minutos jugados: 78\n",
+      "Goles: 1\n",
+      "Asistencias: 2\n",
+      "Tarjetas amarillas: 1\n",
+      "Nivel de cansancio: 8/10\n",
+      "Lesión previa: False\n",
+      "\n",
+      "ANÁLISIS JERÁRQUICO DE SUSTITUCIÓN:\n",
+      "===================================\n",
+      "Decisión: Substitución al minuto 85 (preservar estrella)\n",
+      "Prioridad: MODERADA\n",
+      "\n",
+      "LÓGICA DE DECISIÓN JERÁRQUICA:\n",
+      "==============================\n",
+      "1. PRIMERO: ¿Hay riesgo de lesión? (máxima prioridad)\n",
+      "2. SEGUNDO: ¿El jugador está rindiendo bien?\n",
+      "3. TERCERO: ¿Está muy cansado o en riesgo de tarjeta?\n",
+      "4. ÚLTIMO: ¿Cuántos minutos lleva jugando?\n",
+      "\n",
+      "PATRÓN DE CONDICIONALES ANIDADOS:\n",
+      "if (condición_crítica):\n",
+      "    # acción inmediata\n",
+      "else:\n",
+      "    if (condición_importante):\n",
+      "        if (subcondición):\n",
+      "            # acción específica\n",
+      "        else:\n",
+      "            # alternativa\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿Por qué evaluamos la lesión ANTES que el rendimiento?\n",
+      "2. ¿Cómo se parece esta estructura a las decisiones reales?\n",
+      "3. ¿Qué ventaja tienen las decisiones 'anidadas'?\n",
+      "4. ¿Qué otros criterios agregarías a esta evaluación?\n"
      ]
     }
    ],
@@ -638,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3e6bac0c",
    "metadata": {},
    "outputs": [
@@ -646,21 +776,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Información del jugador:\n",
-      "Nombre: Lionel Messi\n",
-      "Edad: 36 años\n",
-      "Posición: Delantero\n",
-      "Goles esta temporada: 11\n",
+      "CREANDO NUESTRO PRIMER SISTEMA TÁCTICO\n",
+      "========================================\n",
+      "PROCESO DE CONVOCATORIA AUTOMÁTICA\n",
+      "===================================\n",
       "\n",
-      "Información del equipo:\n",
-      "Equipo: Barcelona\n",
-      "Liga: La Liga\n",
-      "Estadio: Camp Nou (99,354 asientos)\n",
+      "EVALUANDO A: Lewandowski\n",
+      "--------------------\n",
+      "Goles: 5, Asistencias: 3, Edad: 35\n",
+      "Puntuación: 21\n",
+      "Decisión: CONVOCADO - Rendimiento excelente\n",
       "\n",
-      "Resultado del partido:\n",
-      "Barcelona 2 - 1 Real Madrid\n",
-      "Fecha: 2024-10-26\n",
-      "Asistencia: 85,000 espectadores\n"
+      "EVALUANDO A: Pedri\n",
+      "--------------------\n",
+      "Goles: 2, Asistencias: 8, Edad: 21\n",
+      "Puntuación: 22\n",
+      "Decisión: CONVOCADO - Rendimiento excelente\n",
+      "\n",
+      "EVALUANDO A: Ansu Fati\n",
+      "--------------------\n",
+      "Goles: 1, Asistencias: 1, Edad: 21\n",
+      "Puntuación: 0\n",
+      "Decisión: NO CONVOCADO - Lesionado\n",
+      "\n",
+      "EVALUANDO A: Busquets\n",
+      "--------------------\n",
+      "Goles: 0, Asistencias: 5, Edad: 35\n",
+      "Puntuación: 10\n",
+      "Decisión: CONVOCADO - Rendimiento bueno\n",
+      "\n",
+      "========================================\n",
+      "VENTAJAS DE LAS FUNCIONES:\n",
+      "=========================\n",
+      "1. REUTILIZACIÓN: Una sola definición, múltiples usos\n",
+      "2. CONSISTENCIA: Mismos criterios para todos\n",
+      "3. MANTENIMIENTO: Cambiar lógica en un solo lugar\n",
+      "4. CLARIDAD: Código más fácil de entender\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿En qué se parece una función a una 'jugada ensayada'?\n",
+      "2. ¿Qué ventaja tiene definir criterios una sola vez?\n",
+      "3. ¿Cómo mejorarías los criterios de evaluación?\n",
+      "4. ¿Qué otras 'funciones tácticas' crearías para un club?\n"
      ]
     }
    ],
@@ -735,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "074458c2",
    "metadata": {},
    "outputs": [
@@ -743,21 +900,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Estadísticas iniciales: {'partidos_jugados': 15, 'victorias': 10, 'empates': 3, 'derrotas': 2}\n",
+      "SISTEMA AVANZADO DE ANÁLISIS TÁCTICO\n",
+      "========================================\n",
+      "ANÁLISIS DEL FC BARCELONA\n",
+      "-------------------------\n",
+      "Goles por partido: 1.80\n",
+      "Goles recibidos por partido: 0.80\n",
+      "Categoría del equipo: EQUIPO SÓLIDO\n",
       "\n",
-      "Estadísticas actualizadas:\n",
-      "partidos_jugados: 15\n",
-      "victorias: 10\n",
-      "empates: 3\n",
-      "derrotas: 2\n",
-      "goles_favor: 28\n",
-      "goles_contra: 12\n",
-      "puntos: 33\n",
+      "ANÁLISIS DE LEWANDOWSKI\n",
+      "----------------------\n",
+      "Efectividad de tiro: 33.3%\n",
+      "Goles cada 90 minutos: 0.75\n",
+      "Calificación: DELANTERO LETAL\n",
       "\n",
-      "Diferencia de goles: +16\n",
+      "CONCEPTOS CLAVE DE FUNCIONES:\n",
+      "==============================\n",
+      "def nombre_funcion(parámetros): - Define la 'jugada'\n",
+      "    # código de la función - Pasos de la jugada\n",
+      "    return resultado - Devuelve el resultado\n",
       "\n",
-      "Claves disponibles: ['partidos_jugados', 'victorias', 'empates', 'derrotas', 'goles_favor', 'goles_contra', 'puntos']\n",
-      "Valores: [15, 10, 3, 2, 28, 12, 33]\n"
+      "# Para usar la función:\n",
+      "resultado = nombre_funcion(valores)\n",
+      "\n",
+      "Preguntas de reflexión:\n",
+      "1. ¿Por qué es útil que las funciones 'devuelvan' valores?\n",
+      "2. ¿Cómo se parece esto a delegarle tareas a tu asistente técnico?\n",
+      "3. ¿Qué otras funciones de análisis crearías?\n",
+      "4. ¿Por qué es mejor tener funciones especializadas vs una función gigante?\n"
      ]
     }
    ],
@@ -931,7 +1101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "26f3437b",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "3090d07e",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3224c8ea",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "50fedd57",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c03a726c",
    "metadata": {},
    "outputs": [
@@ -1373,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "1e77cb47",
    "metadata": {},
    "outputs": [
@@ -1381,15 +1551,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Goleadores Barcelona: {'Messi', 'Griezmann', 'Neymar', 'Suarez'}\n",
+      "Goleadores Barcelona: {'Griezmann', 'Neymar', 'Suarez', 'Messi'}\n",
       "Goleadores Real Madrid: {'Ronaldo', 'Benzema', 'Modric', 'Bale'}\n",
-      "Goleadores Champions: {'Messi', 'Ronaldo', 'Benzema', 'Lewandowski'}\n",
+      "Goleadores Champions: {'Ronaldo', 'Benzema', 'Messi', 'Lewandowski'}\n",
       "\n",
       "=== OPERACIONES CON CONJUNTOS ===\n",
-      "Todos los goleadores: {'Messi', 'Suarez', 'Benzema', 'Griezmann', 'Ronaldo', 'Modric', 'Neymar', 'Bale'}\n",
+      "Todos los goleadores: {'Neymar', 'Suarez', 'Modric', 'Bale', 'Griezmann', 'Benzema', 'Ronaldo', 'Messi'}\n",
       "Goleadores en ambos equipos: set()\n",
-      "Solo goleadores del Barcelona: {'Messi', 'Griezmann', 'Neymar', 'Suarez'}\n",
-      "Goleadores no comunes: {'Messi', 'Suarez', 'Benzema', 'Griezmann', 'Ronaldo', 'Modric', 'Neymar', 'Bale'}\n",
+      "Solo goleadores del Barcelona: {'Griezmann', 'Neymar', 'Suarez', 'Messi'}\n",
+      "Goleadores no comunes: {'Neymar', 'Suarez', 'Modric', 'Bale', 'Griezmann', 'Benzema', 'Ronaldo', 'Messi'}\n",
       "\n",
       "=== VERIFICACIONES ===\n",
       "¿Messi ha marcado para el Barcelona? True\n",
@@ -1510,7 +1680,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.10.12)",
    "language": "python",
    "name": "python3"
   },
